init bash